# ftl

./: CMakeLists.txt  LICENCE.md  README.md  meson.build
docs/: ring_buffer.md
include/ftl/: array.hpp  hash.hpp  memory.hpp  result.hpp  ring_buffer.hpp  utility.hpp  utility_macros.hpp
tests/: meson.build  test_common.hpp
tests/array/: array.cpp
tests/result/: result.cpp
tests/ring_buffer/: ring_buffer.cpp  ring_buffer_allocated.cpp  ring_buffer_common.cpp  ring_buffer_static.cpp
